--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Linear Algebra
-tagline: Linear Algebra SPRING 2024
+title: 离散数学
+tagline: 离散数学2024秋季学期
 description: Course Website for Linear Algebra at SHNU in SPRING 2024
 author: Qizhe Yang
 baseurl: '/' # the subpath of your site, e.g. /blog
