--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: 离散数学
 tagline: 离散数学2024秋季学期
-description: Course Website for Linear Algebra at SHNU in SPRING 2024
-author: Qizhe Yang
+description: 上海师范大学离散数学(080931104261.01)
+author: 杨启哲
 baseurl: '/' # the subpath of your site, e.g. /blog
 url: 'https://www.dm2024w.spacepenguin.com.cn' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
